Fix button being cut off

--- a/src/media/css/forms.styl
+++ b/src/media/css/forms.styl
@@ -177,7 +177,7 @@ label [value]:invalid ~ [reason=invalid] {
         margin-top: 10px;
         position: absolute;
         right: -10px;
-        top: -60px;
+        top: -57px;
 
         // Show only "Save Changes" and "Sign Out" buttons on tablet and larger.
         a:nth-child(2) ~ a {
